--- a/_posts/2026-01-02-week-00.md
+++ b/_posts/2026-01-02-week-00.md
@@ -10,7 +10,7 @@ Hitting chest at the YMCA this morning. Warmed up with some cable shoulder work 
 - Machine Chest Press (close grip)
 - Incline Treadmill (30mins)
 
-In the future I won't be posting daily here, once work starts up this coming Monday, but will aim for 1-2 posts per week since really I don't have much to say. I'm not a gym philospher like [Sam Sulek](https://www.youtube.com/@sam-sulk) (🐐). However, **big news** [IDAF](https://idfa.ca/) announced their first Montreal competition for July 19th, which gives me more time than I initally thought. Let's bulk the fuck up!
+In the future I won't be posting daily here, once work starts up this coming Monday, but will aim for 1-2 posts per week since really I don't have much to say. I'm not a gym philospher like [Sam Sulek](https://www.youtube.com/@sam-sulek) (🐐). However, **big news** [IDAF](https://idfa.ca/) announced their first Montreal competition for July 19th, which gives me more time than I initally thought. Let's bulk the fuck up!
 
 Now I need to learn how to pose! 😬
 
