--- a/_posts/2026-01-04-week-00.md
+++ b/_posts/2026-01-04-week-00.md
@@ -1,25 +1,37 @@
 ---
-title: "Week 0 – Leg & Arm Day"
+title: "Week 0 – Leg & Arm Day - Holidays are over!"
 ---
 
 ![Brock Leg Extensions](/assets/images/bmf-leg-extensions.png)
 
-Had one of the best leg days in recent memory this morning, the setlist was as follows:
+Had one of the best leg days in recent memory this morning. The set list was as follows:
 
 - Squats
-- Seated Leg Curls
-- Seated Leg Extensions
-- Standing Calf Raises
-- Cable Curls
-- Overhead Tricep Extensions
-- Tricep Pushdowns
-- Oblique Swings
-- Sauana (15min)
+- Seated leg curls
+- Seated leg extensions
+- Standing calf raises
+- Cable curls
+- Overhead triceps extensions
+- Triceps pushdowns
+- Oblique swings  
+- Sauna (15 min)
 
-Great morning at the Y, not many people around which I thought was strange this early into January. Started with squats, building only to 335lbs but focusing on 8-20 rep range. Normally when I squat and I'm feeling in the zone I tend to push closer to 1-rep maxs, but I need to shake that shit from my head. Leg curls were feeling great too, they're new to the rotation and they absolutely stretch my hamstrings.
+Great morning at the Y — not many people around, which felt strange this early into January.
 
-Finished off the morning with some arm work then hit the sauna. Spent the time in the heat trying to figure out the plan for lifts and cardio as the holidays are over, the kids will be back to school and I'll be back to work tomorrow. I figure morning cardio will be the way, then lift in the afternoons. I hope the Gold's isn't a fucking warren for January. 
+Started with squats, building only to **335 lbs**, but focusing on an **8–20 rep range**. Normally, when I’m feeling in the zone, I tend to push closer to one-rep maxes, but I need to shake that mindset. The leg curls felt great too; they’re new to the rotation and absolutely stretch my hamstrings.
+
+Finished the session with some arm work, then hit the sauna. Spent the time in the heat thinking through the plan for lifts and cardio now that the holidays are over — kids back to school, back to work tomorrow.
+
+Morning cardio seems like the move, with lifts in the afternoon. Hopefully Gold’s isn’t a complete fucking warren in January.
 
 Off to meal prep.
+
+### Notes
+- Squats felt strong and controlled
+- Hamstrings responded well to curls
+
+### TODO
+- Lock in cardio and lifting schedule
+- Research posing and judging
 
 {% include instagram.html url="https://www.instagram.com/p/DTGCNd9kcx0/" %}
