--- a/_posts/2026-01-07-week-01.md
+++ b/_posts/2026-01-07-week-01.md
@@ -4,7 +4,7 @@ title: "Week 1 – Legs - Diet Thoughts"
 
 ![Brock on the scale](/assets/images/bmf-scale.png)
 
-Working from home today and slammed, so I didn’t get to the gym until much later than normal. Combined with the start of the new year, I was a little worried about the YMCA’s capacity. Luckily it was pretty empty — mostly cardio users — so I was able to get in another solid leg session.
+Working from home today and was slammed, so I didn’t get to the gym until much later than normal. Combined with the start of the new year, I was a little worried about the YMCA’s capacity. Luckily it was pretty empty — mostly cardio users — so I was able to get in another solid leg session.
 
 Set list:
 
@@ -16,7 +16,7 @@ Set list:
 
 This combo absolutely kills me every time, in the best way possible. Not as fatiguing as squat days, but the quad pump is unmatched.
 
-On the leg press, I slowly load the 45s and start with single-leg presses at **45 and 90 lbs** to warm up, then build to around **600–700 lbs**, keeping things in the **6–12 rep range**. As I deload, I play with foot placement to really burn out the legs. Today I went full Tom Platz style, with a V-shaped stance — veins popping in the quads. Loved the **vascularity**.
+On the leg press, I slowly load the 45s and start with single-leg presses at **45 and 90 lbs** to warm up, then build to around **600–700 lbs**, keeping things in the **6–12 rep range**. As I deload, I play with foot placement to really burn out the legs. Today I went full [Tom Platz style](https://www.youtube.com/shorts/7_WIBhSLiD8), with a V-shaped stance — veins popping in the quads. Loved the **vascularity**.
 
 Finished the session with **30 minutes on the elliptical**, then spent some time thinking about diet and current weight trends. This morning’s weigh-in was **172.2 lbs**, which is trending down over the past week, despite increasing protein (and carbs and fats, for that matter).
 
