--- a/_posts/2026-01-10-week-01.md
+++ b/_posts/2026-01-10-week-01.md
@@ -1,5 +1,5 @@
 ---
-title: "Week 1 – Rest – Physique Research"
+title: "Week 1 – Rest – Competition Research"
 ---
 
 ![Brock thinking](/assets/images/bmf-shorts.png)
