--- a/_posts/2026-01-11-week-01.md
+++ b/_posts/2026-01-11-week-01.md
@@ -15,8 +15,11 @@ Finished up with a **10-minute sauna**, then caught the bus to the curling rink.
 
 Back home to meal prep. Not much else to dwell on today. Need to catch up with family and get some rest.
 
+On to week 2!
+
 ### Notes
 - Weight down to **172.6 lbs**, trending basically flat  
+- Up the calories (protein / carbs, minimize the fat)
 
 ### TODO
 - Build spreadsheet for weights and reps  
