--- a/_posts/2026-01-11-week-01.md
+++ b/_posts/2026-01-11-week-01.md
@@ -23,7 +23,8 @@ On to week 2!
 
 ### TODO
 - Build spreadsheet for weights and reps  
-- Research posing and judging  
+- Research posing and judging
+- Buy tiny shorts 
 
 {% include instagram.html url="https://www.instagram.com/p/DTYWz3wj2na/" %}
 
