--- a/_posts/2026-01-12-week-02.md
+++ b/_posts/2026-01-12-week-02.md
@@ -24,4 +24,5 @@ Finally, I knocked out a bit of my TODO list and spun up a repo for tracking my 
 ### TODO
 - Research posing and judging 
 - Graph lift data
+- Buy tiny shorts
 
