--- a/_posts/2026-01-13-week-02.md
+++ b/_posts/2026-01-13-week-02.md
@@ -22,6 +22,8 @@ I’ve seen similar competitions around June/July, but I don’t really know how
 
 ### TODO
 - Research posing and judging  
-- Graph lift data  
+- Graph lift data
+- Buy tiny shorts
+- Email Shaun about IDAF rebrand
 
 {% include instagram.html url="https://www.instagram.com/p/DTdBalYkbFh/" %}
