--- a/_posts/2026-01-17-week-02.md
+++ b/_posts/2026-01-17-week-02.md
@@ -1,5 +1,5 @@
 ---
-title: "Week 2 – Back – 'like 🧈 scraped over too much 🍞.' "
+title: "Week 2 – Back – 'I feel thin... like 🧈 scraped over too much 🍞.' "
 ---
 
 ![Brock focus](/assets/images/bmf-focus.png)
