--- a/_posts/2026-01-31-week-04.md
+++ b/_posts/2026-01-31-week-04.md
@@ -28,3 +28,5 @@ Off to the grocery store this afternoon to stock up on ground chicken and rice.
 ### TODO
 - Research posing and judging  
 - ~~Input 2026 lifts into the Progress section~~
+
+{% include instagram.html url="https://www.instagram.com/p/DULu8VXEWc2/" %}
