--- a/_posts/2026-02-03-week-05.md
+++ b/_posts/2026-02-03-week-05.md
@@ -4,17 +4,19 @@ title: "Week 5 – Pull – New Program Thoughts 💭"
 
 ![Brock pullup](/assets/images/bmf-pullup.png)
 
-Was nervous trying the new program today, a pull day with the following setlist:
+Was a bit nervous trying the new program today. Started things off with a Pull day, set list looked like this:
 
-- Pull-ups
-- T-bar rows
-- Bentover cable rows
-- Reverse pec deck
-- Cable curls
+- Pull-ups  
+- T-bar rows  
+- Bent-over cable rows  
+- Reverse pec deck  
+- Cable curls  
 
-I've been doing the kind of pyramid sets since I was in university, and it's worked pretty well for me. I'm an old dog and this is a new trick, but I have to admit the first session went really well. Did light warmups for each exercise then really drove the intensity on the working sets. I'm hopefully this style of training will put some size on my old frame.
+I’ve been running pyramid-style sets since university, and honestly, it’s worked pretty well for me. I’m an old dog and this is a new trick — but I have to admit, the first session went really well.
 
-At lunch I hit a light 30 minutes on the elliptical. The plan for tomorrow is legs, will plan that out and rest up tonight. 
+I kept warm-ups light, then really drove intensity on the working sets. Fewer sets, but much more focus. I’m hopeful this style of training will help put some size on my aging frame.
+
+At lunch I hit a light **30 minutes on the elliptical**. Plan for tomorrow is legs — I’ll map that out and rest up tonight.
 
 ### Notes
 - Weight at **174.4 lbs**  
