--- a/_posts/2026-02-06-week-05.md
+++ b/_posts/2026-02-06-week-05.md
@@ -26,3 +26,5 @@ Tomorrow is lower body. Time to make a plan. Hope the streak continues.
 
 ### TODO
 - Research posing and judging  
+
+{% include instagram.html url="https://www.instagram.com/p/DUaw6MIESb7/" %}
