--- a/_posts/2026-02-07-week-05.md
+++ b/_posts/2026-02-07-week-05.md
@@ -32,3 +32,7 @@ Tomorrow is rest, meal prep, and finally digging into judging and posing.
 
 ### TODO
 - Research posing and judging  
+
+
+
+{% include instagram.html url="https://www.instagram.com/p/DUdkny6kVqj/" %}
