--- a/_posts/2026-02-14-week-06.md
+++ b/_posts/2026-02-14-week-06.md
@@ -25,3 +25,5 @@ Taking the family to St-Hubert for dinner this evening. Only the best for my fam
 
 ### TODO
 - Research posing and judging  
+
+{% include instagram.html url="https://www.instagram.com/p/DUvg9c6kXiK/" %}
