--- a/_posts/2026-02-19-week-07.md
+++ b/_posts/2026-02-19-week-07.md
@@ -4,15 +4,15 @@ title: "Week 7 – Rest – Loafmaxxing"
 
 ![Brock lofi](/assets/images/bmf-lofi.png)
 
-Wonderful restful sleep last night, got into work with enough time to get 30 mins on the elliptical before starting my day.
+Wonderful, restful sleep last night. Got into work early enough to get **30 minutes on the elliptical** before starting my day.
 
-Great day for Canadian men's curling.
+Great day for Canadian men’s curling.
 
-Awful day for Canadian women's hockey.
+Awful day for Canadian women’s hockey.
 
-Got in a decent abs class in at lunch.
+Got a decent ab class in at lunch.
 
-Very restful day listing to [MJ Lenderman](https://www.youtube.com/watch?v=i07eVb1rDs0) and pumping out code.
+Very restful day listening to [MJ Lenderman](https://www.youtube.com/watch?v=i07eVb1rDs0) and pumping out code.
 
 Upper body tomorrow.
 
