--- a/_posts/2026-02-22-week-07.md
+++ b/_posts/2026-02-22-week-07.md
@@ -1,10 +1,14 @@
 ---
-title: "Week 7 – Rest – 🍕"
+title: "Week 7 – Rest – 🥈"
 ---
 
-![Brock pizza](/assets/images/bmf-pizza.png)
+![Brock hockey](/assets/images/bmf-hockey.png)
 
-Rest day. Eating my feelings. Push out the feeling tomorrow
+Rest day.
+
+Eating my feelings.
+
+We push the feelings tomorrow.
 
 ### Notes
 - Weight at **173.4 lbs**
